--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.2",
+    "formik": "^2.4.5",
     "next": "13.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.11.0"
+    "react-icons": "^4.11.0",
+    "yup": "^1.3.0"
   }
 }
